# demo-auth-service

./: .dockerignore  .gitignore  BASIC_AUTH_GUIDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py  seed.py  setup_test_db.py
app/: __init__.py
app/admin/: routers.py  schemas.py
app/auth/: routers.py  schemas.py  security.py  signals.py  sso_config.py
app/core/: db.py  logging.py  redis.py  settings.py
app/rbac/: models.py  schemas.py  services.py
app/users/: models.py  routers.py  schemas.py  services.py
docs/: deployment.md  features-api.md  logging.md  project-structure.md  testing.md
examples/: fastapi_logging_integration.py  logging_demo.py  rbac_logging_demo.py
migrations/: env.py
migrations/versions/: 4ee3bff2b057_init.py  88676bfc3768_init.py
tests/: conftest.py  factories.py  test_factories_example.py  test_rbac.py  test_users.py
