[project]
name = "oauth2-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "authlib>=1.6.0",
    "blinker>=1.9.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.3",
    "itsdangerous>=2.2.0",
    "jwt>=1.3.1",
    "passlib>=1.7.4",
    "pydantic>=2.11.5",
    "redis>=6.2.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
